--- a/index.html
+++ b/index.html
@@ -319,8 +319,9 @@
       </div>
     </section>
     <!--UTOPIA -->
-    <section id="utopia" class="py-24 bg-black relative" data-stars>
-      <div class="container mx-auto px-6">
+    <section id="utopia" class="py-24 bg-black relative overflow-hidden">
+      <div class="stars-container absolute inset-0 z-0"></div>
+      <div class="container mx-auto px-6 relative z-10">
         <div
           class="flex flex-col lg:flex-row items-center justify-between gap-12"
         >
